# quipu

./: .git-blame-ignore-revs  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  justfile
.cargo/: config.toml
.claude/skills/qp-critique/: SKILL.md
.claude/skills/qp-implement/: SKILL.md
.claude/skills/qp-verify-docs/: SKILL.md
.claude/skills/qp-verify-docs/references/: classification.md  house-style.md  keep-fix-cut.md  source-vs-rendered.md  sweep.md
.claude/skills/wave-execute/: SKILL.md
.claude/skills/wave-orchestrate/: SKILL.md
.github/workflows/: ci.yml
board/: .gitignore  README.md  index.html  package.json  tsconfig.json
board/src/: App.svelte  app.css  main.ts
board/src/components/: DetailPane.svelte  ForceGraph.svelte  Modal.svelte  StateChips.svelte  TaskTree.svelte  TreeNode.svelte
board/src/lib/: classify.ts  data.ts  graph.ts
board/src/stores/: modal.ts  ui.ts
docs/: DECISIONS.md  HANDOFF.md  TODO.md  architecture.md
docs/assets/: verify-button.html
docs/modules/: abandon.md  add.md  assign.md  block.md  cancel.md  claim.md  cmd.md  complete.md  db.md  decisions.md  depends.md  edit.md  id.md  install_skills.md  list.md  log.md  outcome.md  reclaim.md  relation.md  render.md  report.md  show.md  store.md  tag.md  time.md  timeline.md  wait.md  watch.md  wave.md
docs/superpowers/plans/: 2026-05-23-quipu-mvp.md
skills/report-render/: SKILL.md
skills/verify-docs/: SKILL.md
skills/wave/: SKILL.md
src/: db.rs  id.rs  main.rs  outcome.rs  schema.sql  store.rs  time.rs
src/cmd/: abandon.rs  add.rs  assign.rs  block.rs  cancel.rs  claim.rs  complete.rs  decisions.rs  depends.rs  edit.rs  html.rs  html_layout.rs  html_render.rs  install_skills.rs  list.rs  log.rs  mod.rs  reclaim.rs  relation.rs  render.rs  report.rs  show.rs  status.rs  tag.rs  timeline.rs  tree.rs  wait.rs  watch.rs  wave.rs
tests/: cli.rs  docs.rs  race.rs  wave_e2e.rs
