[package]
name = "quipu"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Structured, observable task substrate for agent orchestration"
license = "MIT OR Apache-2.0"

[[bin]]
name = "qp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Warn locally so `cargo build` stays quiet and fast; `just lint` and CI
# promote these to -D warnings. Deliberately NOT pedantic/nursery: this is a
# terse SQL-adjacent CLI and pedantic fights the intentional style rather than
# catching bugs.
[lints.rust]
unused = "warn"

[lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
